# poc-roomle-core-geometry

./: .gitignore  README.md  buildWASM.sh  buildWasmEmcc.sh  package-lock.json  package.json
docs/: intersect_line_segments.html
src/client/: .gitignore  threeClient.ts  three_client.ts
src/client/examples/: constructiveSolidGeometry.ts  constructive_solid_geometry.ts  outline_geometry.ts
src/client/utility/: controls.ts  geometry_buffer.ts  intersection_utility.ts  math_utility.ts  mesh_intersection.ts  mesh_utility.ts  outline_utility.ts  three_geometry.ts  ui_utility.ts
src/wasm/: CMakeLists.txt  emscriptenBindings.cpp  meshUtilityEmbind.cpp
src/wasm/mesh_utility/: constructiveSolidGeometry.cpp  constructiveSolidGeometry.h  meshIntersection.cpp  meshIntersection.h  meshMath.cpp  meshMath.h  meshSpecification.cpp  meshSpecification.h  outlineConstruction.cpp  outlineConstruction.h
src/wasm/test/: CMakeLists.txt
src/wasm/test/mesh_utility/: constructiveSolidGeometryTest.cpp  meshIntersectionTest.cpp  meshIntersectionTestHelper.h  meshMathTest.cpp  meshSpecificationTest.cpp  outlineConstructionTest.cpp
wasm/: MeshUtility.js  MeshUtility.wasm  MeshUtilityJs.js  MeshUtilityJs.js.mem
